ckanext/datacity/fanstatic/datacity-theme.css
body {
    font-family: 'Rubik', Tahoma, "Helvetica Neue", Arial, Helvetica, sans-serif;
    background: initial;
}

.masthead .nav > li > a {
    font-size: 16px;
    font-weight: bold;
}

.homepage .module-search .module-content .heading {
    margin: -36px 25% 170px;
    font-size: 3em;
    line-height: initial;
    text-align: center;
    border-radius: 35px;
    width: 50%;
    padding: 70px 20px 30px;
}

@media (max-width: 768px) {
   .homepage .module-search .module-content .heading {
        width: 100%;
        margin: 0;
        margin-bottom: 50px;
        padding: 0;
   }
}

.homepage .module-search {
    padding: 0;
}

.homepage .module-search h3.heading {
    font-weight: bold;
    font-size: 40px;
}

.homepage .module-search .module-content {
    background-color: transparent;
    padding-bottom: 20px;
    margin-top: 0;
    padding-top: 0;
}

.homepage .module-search .search-title {
    font-weight: bold;
    font-size: 16px;
    padding-bottom: 10px;
}

.search-form .search-input.search-giant {
    margin: 0 25%;
}

@media (max-width: 768px) {
    .search-form .search-input.search-giant {
        margin: 0;
    }
    [role=main] {
        min-height: initial;
        padding-bottom: 0;
    }
}

.homepage .module-search .search-giant input {
    border-color: #0058a9;
    border-width: 2px;
    border-radius: 15px;
}

.box {
    border: 0;
    box-shadow: initial;
    background-color: transparent;
}

.module-search .box {
    background-color: transparent;
}

.homepage .module-search {
    background-color: transparent;
}

.search-by-cat {
    padding: 10px 0;
	margin-top: 0;
	-webkit-border-radius: 0 0 3px 3px;
	-moz-border-radius: 0 0 3px 3px;
	border-radius: 0 0 3px 3px;
    margin-bottom: 55px;
}

@media (min-width: 768px) {
    .search-by-cat {
        padding: 10px 40px;
    }
}

@media (min-width: 992px) {
    .search-by-cat {
        padding: 10px 140px;
    }
}

@media (min-width: 1200px) {
    .search-by-cat {
        padding: 10px 245px;
    }
}

.search-by-cat h3{
    margin-top: 30px;
    margin-bottom: 30px;
    font-size: 16px;
    font-weight: bold;
    line-height: 40px;
    text-align: center;
}

@media (max-width: 768px) {
    .search-by-cat h3 {
        margin-top: 0;
        margin-bottom: 15px;
    }
}

.surrey-media-grid {
	margin: 0;
	list-style: none;
	padding-bottom: 15px;
}

.surrey-media-grid:before, .surrey-media-grid:after {
	display: table;
	content: "";
	line-height: 0;
}

.surrey-media-grid:after {
	clear: both;
}

.surrey-media-item {
	position: relative;
	width: 120px;
	text-align: center;
	height: 120px;
    margin-left: 13px;
    margin-right: 13px;
    margin-bottom: 22px;
}

@media (max-width: 768px) {
    .surrey-media-item {
        margin-left: 25%;
        margin-right: 25%;
    }
}

.surrey-media-item-wrap {
    border-radius: 30px;
    width: 120px;
    height: 120px;
    padding-top: 10px;
}

.surrey-media-item span {
	display:block;
    text-align: center;
    font-size: 14px;
    font-weight: bold;
    padding-left: 10px;
    padding-right: 10px;
}

.surrey-media-item img {
	margin:7px 0;
}

.surrey-media-item a {
    text-decoration: none;
}

ul.surrey-media-grid {
    margin: 0;
    padding: 0 26px;
}

.homepage-datasets-top-container .SectionTitle {
    font-size: 24px;
    line-height: 26px;
    position: relative;
    display: inline-block;
    vertical-align: middle;
    text-transform: uppercase;
    font-weight: bold;
    margin: 50px 0 35px 0;
}

.homepage-datasets-top-container h3.dataset-heading a {
    font-weight: bold;
    font-size: 16px;
}

.homepage-datasets-top-container div {
    font-size: 14px;
}

.homepage-datasets-top-container .show-all-datasets-wrap {
    display: flex;
    justify-content: center;
    margin-bottom: 50px;
    margin-top: 30px;
}

.homepage-datasets-top-container .show-all-datasets-wrap h3 {
    padding-top:20px;
    border: 2px solid #1c4f7c;
    border-radius: 9px;
    text-align: center;
    width: 230px;
    font-size: 18px;
    font-weight: bold;
    padding-bottom: 20px;
}

.homepage-datasets-top-container .dataset-resources a {
    color: #ffffff;
}

.module-heading {
    background-color: transparent;
    border: initial;
    font-size: 1.5em;
    margin-bottom: 1em;
}

h2.module-heading span {
    display: inline-block;
    padding-bottom: 5px;
    border-bottom: 3px solid #7E8489;
}

.filters h2.module-heading span {
    border-bottom: 3px solid #D0021B;
}

ul.nav-facet li.nav-item span {
    font-size: 1.1em;
}

ul.nav-facet li.nav-item {
    border: 0;
}

.module-footer {
    border: 0;
    margin-bottom: 1em;
}

.wrapper {
    border: 0;
    box-shadow: initial;
}

.homepage [role=main] {
    padding-top: 0;
}

.media-grid {
    background: initial;
    border: initial;
}

.module-heading i.fa-info-circle {
    display: none;
}

div#content.container .row.wrapper {
    border-top: 1px solid #dddddd;
}

.module-content.sidebar-helper {
    color: #7E8489;
}

.page-header {
    background-color: transparent;
}

.context-info .image img {
    max-width: 200px;
}

.masthead .logo img {
    max-height: 80px;
}

form.lang-select label {
    font-weight: normal;
}

.dc-flex-navbar {
    display: flex;
    align-items: center;
}

.dc-flex-navbar .dcfn-item.dcfni-navbar {
    display: flex;
}

.dc-flex-navbar .dcfn-item.dcfni-navbar a {
    font-size: 16px;
    padding-bottom: 3px;
}

.dc-flex-navbar .dcfn-item.dcfni-navbar a:hover::after {
    position: absolute;
    content: "";
    width: 100%;
    height: 3px;
    top: 100%;
    left: 0;
}

.dc-flex-navbar .dcfn-item.dcfni-navbar li.active a::after {
    position: absolute;
    content: "";
    width: 100%;
    height: 3px;
    top: 100%;
    left: 0;
}

.masthead .navigation .nav-pills li a:hover, .masthead .navigation .nav-pills li a:focus, .masthead .navigation .nav-pills li.active a {
    background-color: transparent;
}

.dc-flex-navbar .dcfn-item.dcfni-navbar nav.section.navigation {
    margin: 0 auto;
}

.masthead .logo {
    margin-right: 0 !important;
}

.dcfni-city-logo {
    flex-basis: 200px;
    flex-grow: 2;
}

@media (max-width: 768px) {
    .dcfni-city-logo {
        flex-basis: 0;
        order: -1;
    }
}

.dcfni-city-logo hgroup {
    text-align: right;
}

.dcfni-datacity-logo {
    text-align: left;
    flex-basis: 200px;
    flex-grow: 2;
}

@media (max-width: 768px) {
    .dcfni-datacity-logo {
        flex-basis: 0;
        order: -2;
    }
}

.footer-row {
    display: flex;
    margin-top: 50px;
}

@media (min-width: 768px) {
    .footer-row {
        justify-content: space-between;
    }
}

@media (max-width: 768px) {
    .footer-row {
        flex-direction: column;
    }
}

.footer-col {
    font-size: 14px;
    font-weight: bold;
    color: white;
}

@media (min-width: 768px) {
    .footer-col {
        margin-left: 10px;
        margin-right: 10px;
    }
    .footer-col-site {
        max-width: 40%;
    }
}

.footer-col a {
    color: white;
}

.footer-col-iia {
    text-align: left;
}

@media (max-width: 768px) {
    .footer-col-iia {
        text-align: initial;
        margin-right: 0;
        margin-left: 0;
    }
}

.footer-col-iia div {
    margin-bottom: 35px;
}

@media (max-width: 768px) {
    .footer-col-iia div {
        margin-top: 8px;
        margin-bottom: 8px;
    }
}

.footer-col-hasadna {
    text-align: center;
}

@media (max-width: 768px) {
    .footer-col-hasadna {
        text-align: initial;
    }
}

.footer-col-hasadna div {
    margin-bottom: 35px;
}

@media (max-width: 768px) {
    .footer-col-hasadna div {
        margin-top: 8px;
        margin-bottom: 8px;
    }
    .footer-col-code {
        border-bottom: 2px dashed #e5e5e5;
        border-top: 2px dashed #e5e5e5;
        padding-top: 16px;
        margin-bottom: 8px;
    }
}

.footer-col-code div {
    margin-bottom: 15px;
}

.footer-col-code .github-logo-icon {
    padding-right: 15px;
    padding-left: 15px;
    height:1.5em;
}

.footer-col-code .ckan-logo-icon {
    padding-right: 15px;
    padding-left: 15px;
    height:1.5em;
}

.footer-col-site ul {
    margin: 0;
    padding: 0;
    list-style: none;
}

.footer-col-site li {
    margin-bottom: 15px;
}

form.lang-select label {
    font-weight: bold;
    color: white;
    font-size: 14px;
}

.label[data-format] {
    background-color: #707070;
}

.label[data-format=geojson] {
    background-color: #8434da;
}

.label[data-format*=xls] {
    background-color: #258340;
}

.label[data-format*=csv] {
    background-color: #8F7000;
}

.btn-success {
    background-color: #258340;
}

.badge {
    background-color: #707070;
}

section.additional-info a,div.module-content table a {
    color: #3d3dff;
}

